# gitpulse-analytics

./: .env  .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
dashboard/: app.py  queries.py
dashboard/components/: _palette.py  activity_trends.py  community.py  ecosystem.py  issues.py  kpi_cards.py  organizations.py  overview_charts.py  pr_health.py  review_health.py  sidebar.py
dashboard/data/silver/: orgs.parquet
dashboard/pages/: about.py  community.py  development.py  ecosystem.py  overview.py
infra/: init_minio_buckets.py
infra/scripts/: init_minio.py
pipelines/: __init__.py  bronze_flow.py  gold_flow.py  silver_flow.py
scripts/: export_dashboard_data.py
src/core/config/: __init__.py  settings.py
src/core/contracts/: __init__.py  bronze.py  gold.py  silver.py
src/core/helpers/: __init__.py  delta.py  logger.py  s3.py
src/core/ingestion/: __init__.py  bronze.py  runner.py
src/core/transforms/: __init__.py  bronze_to_silver.py  silver_to_gold.py
src/core/utils/: logger.py
tests/: conftest.py
tests/contracts/: test_bronze.py  test_gold.py  test_silver.py
tests/helpers/: test_delta.py  test_s3.py
tests/transforms/: test_gold.py  test_silver.py
