[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitpulse-analytics"
version = "0.1.0"
description = "Data engineering pipeline for GitHub analytics using open-source tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "prefect>=3.6.29",
    "ruff>=0.15.12",
    "s3fs>=2026.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true # allow direct references to local packages for development

[tool.hatch.build.targets.wheel]
packages = ["src/core"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "PL",  # pylint
]
ignore = [
    "E501", # too long lines
    "PLR0913", # too many arguments in function definition
]

[tool.ruff.lint.isort]
known-first-party = ["core"] # help isort recognize our local modules for better import sorting
