[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitpulse-analytics"
version = "0.1.0"
description = "Data engineering pipeline for GitHub analytics using open-source tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "deltalake>=1.6.0",
    "pandera[polars]>=0.31.1",
    "polars>=1.40.1",
    "prefect>=3.6.29",
    "rich>=15.0.0",
    "s3fs>=2026.4.0",
]

[dependency-groups]
dev = [
    "itables>=2.7.3",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pyrefly>=0.64.1",
    "ruff>=0.15.12",
]

[tool.uv]
managed = true

# allow direct references to local packages for development
[tool.hatch.metadata]
allow-direct-references = true

# specify the source directory for our package
[tool.hatch.build.targets.wheel]
packages = ["src/core"]

# ruff configurations
[tool.ruff]
line-length = 100
target-version = "py312"

# linting rules
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify (sugere código mais simples)
    "PT",  # flake8-pytest-style (melhor prática em testes)
    "PL",  # pylint
    "C90", # mccabe (code complexity)
]
ignore = [
    "E501",     # too long lines
    "PLR0913",  # too many arguments in function definition
]
fixable = ["ALL"]

# help isort recognize our local modules for better import sorting
[tool.ruff.lint.isort]
known-first-party = ["src"]

# style settings for code formatting
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# type checking settings for pyrefly
[tool.pyrefly]
project-includes = [
    "src/**/*.py",
    "tests/**/*.py",
]
project-excludes = [
    ".venv/**",
    "build/**",
    "dist/**",
]
search-path = ["src"]
python-version = "3.12"
